--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
-p{
-    padding: 10px 20px; margin: 30px; border: 5px solid #040
-}
+* {
+    box-sizing: border-box;
+  }
+
+  body {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
