--- a/style.css
+++ b/style.css
@@ -7,3 +7,8 @@
     flex-direction: column;
     justify-content: space-between;
   }
+  .nav-list {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+  }
