--- a/style.css
+++ b/style.css
@@ -1,41 +1,8 @@
 * {
+    margin: 0;
+    padding: 0;
     box-sizing: border-box;
-  }
-
-  html {
-    scroll-behavior: smooth; 
-  }
-
-  body {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-  }
-
-  .nav-list {
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-  }
-
-  .nav-list {
-    list-style: none;
-  }
-
-  .nav-link {
-    padding: 0 20px;
-    line-height: 50px;
-  }
-
-  .nav-link {
-    transition: .3s;
-  }
-  
-  .section {
-    width: 50%;
-  }
-
-  .section-title{
-    display: flex;
-    flex-wrap: wrap;
+    font-family: Alegreya Sans;
+    color: var(--text-color);
+    scroll-behavior: smooth;
   }
